fixed AG Grid layout issues

--- a/src/styles.css
+++ b/src/styles.css
@@ -29,3 +29,7 @@ h1 {
 small {
     min-height: 1.2em;
 }
+
+.min-height-0 {
+    min-height: 0;
+}
